no bash on docker image

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,8 +10,19 @@ jobs:
       - run:
           name: Build Docker Image
           command: |
+            export VERSION=`date +%Y%m%d-%H%M%S -u`
+
             echo $PASS | docker login -u $USER --password-stdin
-            ./build.sh
+
+            docker build  -f ubuntu-aws.dockerfile       -t kaktooss/aws       -t kaktooss/aws:${VERSION} .
+            docker build  -f ubuntu-aws-java.dockerfile  -t kaktooss/aws-java  -t kaktooss/aws-java:${VERSION} .
+
+            docker push kaktooss/aws:${VERSION}
+            docker push kaktooss/aws:latest
+
+            docker push kaktooss/aws-java:${VERSION}
+            docker push kaktooss/aws-java:latest
+
 
 workflows:
   version: 2
