Use self-hosted agent

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -41,9 +41,9 @@ workflows:
   build-image:
     jobs:
       - checkout
-#      - build:
-#          context: dockerhub
-#          filters:
-#            branches:
-#              only:
-#                - master
+      - build:
+          context: dockerhub
+          filters:
+            branches:
+              only:
+                - master
