--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,13 +20,12 @@ jobs:
             - .
   build:
     <<: *docker
-    environment:
-      STORAGE_DRIVER: vfs
-      BUILDAH_ISOLATION: chroot
-    resource_class: dct-local/dct-local
+    resource_class: small
     steps:
       - attach_workspace:
           at: .
+      - setup_remote_docker:
+          version: 20.10.14
       - run:
           name: Build Docker Image
           command: |
@@ -69,7 +68,4 @@ workflows:
           requires:
             - checkout
           context: dockerhub
-          filters:
-            branches:
-              only:
-                - master
+
